objects/LLC_BI__Credit_Memo_Modifcation__c.object
<CustomObject>
    <description>This object is used to make changes to a Loan after the initial approval, but before it is closed/ booked.</description>
    <fields>
        <fullName>Borrower_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Borrower Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Borrower_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Borrower Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Add_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be used in &apos;Does Not Require Approval&apos; section.</description>
        <label>Add Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Add_Covenant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>N/A - Description field will be used to detail proposed changes. Once approved, the user will go back to the loan and make those updates</description>
        <label>Add Covenant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Add_Guarantor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be used in &apos;Does Not Require Approval&apos; section.</description>
        <label>Add Guarantor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Add_New_Policy_Exception_More_Severe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used on Change Memo for Require Approval</description>
        <label>Add New Policy Exception-More Severe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Add_New_Policy_Exception_Same_Better__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used on Change Memo for Requires Approval</description>
        <label>Add New Policy Exception-Same/Better</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Change_Borrower_Guarantor_Other_Enti__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used on Requires Approval section on Change Memo</description>
        <label>Remove / Change Borrower or Guarantor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Edit_Covenants__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used on Requires approval section on Change Memo</description>
        <label>Edit Covenants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Edit_Existing_Policy_Exceptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Existing Policy Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Edit_Policy_Exceptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used on Requires Approval section on Change memo</description>
        <label>Edit Policy Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_First_Payment_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be used in &apos;Does Not Require Approval&apos; section.</description>
        <label>First Payment Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Amount_Decrease__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used on Change Memo Requires Approval section on read only part.</description>
        <label>Loan Amount Decrease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Amount_Increase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used on Change Memo</description>
        <label>Loan Amount Increase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Pricing_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used on Requires Approval section on Change Memo</description>
        <label>Loan Pricing Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Repayment_Term_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used on Requires Approval section on change memo</description>
        <label>Loan Repayment / Term Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Minor_Loan_Amount_Increase_5_or_5_00__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used on Change Memo</description>
        <label>Minor Loan Amount Increase(&lt;5% or $25k)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Minor_Loan_Repayment_Term_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used on change memo for Does Not Require Approval</description>
        <label>Minor Loan Repayment/Term Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Minor_Non_Credit_Edits_Typos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be used in &apos;Does Not Require Approval&apos; section.</description>
        <label>Minor Non-Credit Edits / Typos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Minor_Pricing_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used on Change Memo Does not Require Approval</description>
        <label>Minor Pricing Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DONT USE THIS FIELD</description>
        <label>Other -D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_PP_Final_Approver_Queue__c</fullName>
        <description>This field is populated from flow and it holds the PP final approver queue i.e approver 4 from PP</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field will have value only when the corresponding PP approvers are till level 4</inlineHelpText>
        <label>Product Package Final Approver Queue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_PP_Final_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated from flow and it holds the PP final approver - either approver 1 or approver 2 or approver 3.
If the final approver is queue it will be stored in other field since the queue will not be stored on this field</description>
        <inlineHelpText>This field will have value only when the corresponding PP approvers are till level 3</inlineHelpText>
        <label>Product Package Final Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_ProposedIncreaseAmount10__c</fullName>
        <label>ProposedIncreaseAmount10%</label>
        <summaryFilterItems>
            <field>LLC_BI__Memo_Data__c.CF_ProposedIncreaseAmount10__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Memo_Data__c.LLC_BI__Memo__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CF_ProposedIncreaseAmount5__c</fullName>
        <label>ProposedIncreaseAmount5%</label>
        <summaryFilterItems>
            <field>LLC_BI__Memo_Data__c.CF_ProposedIncreaseAmount5__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Memo_Data__c.LLC_BI__Memo__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CF_ProposedNewMoney__c</fullName>
        <label>ProposedNewMoney</label>
        <summaryFilterItems>
            <field>LLC_BI__Memo_Data__c.CF_ProposedNewMoney__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Memo_Data__c.LLC_BI__Memo__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CF_Relationship_Manager__c</fullName>
        <description>It shows the relation manager from associated loan</description>
        <formula>LLC_BI__Loan__r.LLC_BI__Loan_Officer__r.FirstName + &apos; &apos; +  LLC_BI__Loan__r.LLC_BI__Loan_Officer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Remove_Change_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used on Requires Approval section on Change Memo</description>
        <label>Remove / Change Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLA_Budget_Amount_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CLA Budget Amount Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLA_Budget_Line_Item_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CLA Budget Line Item Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box indicates if a change of amount is the reason a modification is being created.</description>
        <label>Loan Amount Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically populated based on system configuration. The checkbox is populated based on change request&apos;s category.</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Status__c</fullName>
        <description>This field is automatically set by the approval process and is used in triggers to update the loan wall. It is used to specify the status of the memo.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                    <default>true</default>
                    <label>Not Approved</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>In Review with Pricing Committee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This checkbox is used to specify if the change on the loan is a change in collateral. This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Collateral Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <defaultValue>&apos;memo.memo-details&apos;</defaultValue>
        <description>This field is used to determine the default landing page for this loan within the nCino User Interface.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to determine the default landing page for this loan within the nCino User Interface.</inlineHelpText>
        <label>Default App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is a free form text field. It is optional and manually entered. It is used to input more information or details for the memo.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Equity_Injection_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This checkbox is used to specify if the change to the loan is for the equity injection.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Equity Injection Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantor_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This checkbox is used to specify if the change to the loan is adding a guarantor. This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Guarantor Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantor_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This checkbox is used to specify if the change on the loan is removing a guarantor.</description>
        <label>Guarantor Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This checkbox is used to specify if the change on the loan is a life insurance change.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Life Insurance Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Renewal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates when a user creates a non-material modification. This lookup field associates the Memo to the appropriate LoanRenewal record.</description>
        <label>Loan Renewal</label>
        <referenceTo>LLC_BI__LoanRenewal__c</referenceTo>
        <relationshipLabel>Loan Renewal</relationshipLabel>
        <relationshipName>LoanRenewal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Term_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify if the change to the loan was that of a term change.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <inlineHelpText>Interest rate change, length, etc</inlineHelpText>
        <label>Loan Term Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>This field is a master-detail field to the loan object and is used to associate the Memo to a particular loan. This field is automatically populated when a memo is started from a loan, and is required to associate the correct memo with the loan it is associated to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Memos</relationshipLabel>
        <relationshipName>Change_Memos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maturity_Date_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional checkbox field to specify if the change to the loan is a maturity date change. The system automatically populates this field during a Short Term Extension. Users can associate this field to a fieldset on the loan, and when selected the monitored fields section of the memo displays those fields.</description>
        <label>Maturity Date Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maturity_Date__c</fullName>
        <description>--DEPRECATED-- Users populate this field, generally as part of a workflow, to store the proposed Maturity Date as part of an extension. Use this field to update the loan with the new value.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Memo_Type__c</fullName>
        <description>This field is manually selected and is required when starting a memo. This field indicates the type of the Memo being created.</description>
        <label>Memo Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Memo</fullName>
                    <default>true</default>
                    <label>Change Memo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Rate_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify if the change to the loan is a new rate being requested.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>New Rate Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Notify_Attorney__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify that the attorney will be notified of this Memo.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Notify Attorney</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify a change other than those listed on the Memo page. This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Post_Close_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify that the changes made to the loan relate to post close items.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Post Close Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Re_approval_After_Expiration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify that the change is related to a re-approval of the loan after its expiry.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Re-Approval After Expiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ready_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify that the Memo is ready to be sent for approval.</description>
        <inlineHelpText>Check this when your loan modification is ready to be sent for approval.</inlineHelpText>
        <label>Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Seller_Note_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify that the change on the loan is related to a seller note change.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Seller Note Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Use_of_Proceeds_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify that the change on the loan is a use of proceeds change.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Use of Proceeds Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__User_Initiated__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is automatically set and is used to indicate if the Memo was initiated by a user. If the Memo was initiated via an automated process, then the value will be set to false and the record will be excluded from user initiated Memo restrictions.</description>
        <label>User_Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This text field automatically populates and provides the object with a unique identifier.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Loan_Information_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Information Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Approval_Required_Formula__c</fullName>
        <formula>LLC_BI__Approval_Required__c</formula>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cm_ChangeMemoFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ChangeMemoFlag</label>
        <type>Checkbox</type>
    </fields>
    <label>Memo</label>
    <listViews>
        <fullName>All_Change_Memos</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Approval_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CF_PP_Final_Approver__c</columns>
        <columns>CF_PP_Final_Approver_Queue__c</columns>
        <columns>LLC_BI__Loan__c</columns>
        <columns>CF_Relationship_Manager__c</columns>
        <columns>LLC_BI__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Change Memos</label>
    </listViews>
    <listViews>
        <fullName>Change_Memos_Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CF_PP_Final_Approver__c</columns>
        <columns>CF_PP_Final_Approver_Queue__c</columns>
        <columns>LLC_BI__Loan__c</columns>
        <columns>CF_Relationship_Manager__c</columns>
        <columns>LLC_BI__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Approval_Status__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <label>Change Memos Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Memo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR_EXISTING_CHANGE_MEMO</fullName>
        <active>false</active>
        <description>Check for the existing Change Memo</description>
        <errorConditionFormula>AND(
$User.No_Validation__c = false,
OR((ISPICKVAL(LLC_BI__Approval_Status__c, &apos;Not Approved&apos;)), (ISPICKVAL(LLC_BI__Approval_Status__c, &apos;In Review&apos;)))
)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Approval_Required__c</errorDisplayField>
        <errorMessage>Only one change memo can be in progress at a time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Memo_LoanAmount_Increase_1L_10Percent</fullName>
        <active>true</active>
        <errorConditionFormula>CF_ProposedIncreaseAmount10__c &gt;=1</errorConditionFormula>
        <errorMessage>Please ensure proposed loan amount increase is less than 25% of the original loan amount. If it is greater than 25%, please create a new loan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Memo_LoanAmount_Increased_5K_5Percent</fullName>
        <active>true</active>
        <errorConditionFormula>CF_ProposedIncreaseAmount5__c &gt;=1</errorConditionFormula>
        <errorMessage>Please ensure the proposed loan amount increase is within 5% of the originally approved loan amount or $25,000, whichever is greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_NewMoney_should_be_same_as_LoanAmount</fullName>
        <active>true</active>
        <errorConditionFormula>CF_ProposedNewMoney__c&gt;=1</errorConditionFormula>
        <errorMessage>Please check that New Money has been updated to reflect the proposed increase in the Loan Amount.</errorMessage>
    </validationRules>
</CustomObject>